proxy single thread working great, todo: multithread fix